# ha-anker-charger

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  hacs.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: lint.yml  release.yml  test.yml
custom_components/anker_charger/: __init__.py  api_client.py  config_flow.py  const.py  coordinator.py  icons.json  manifest.json  sensor.py  switch.py
custom_components/anker_charger/solixapi/: api.py  apibase.py  apitypes.py  mqtt.py  mqtt_charger.py  mqtt_device.py  mqtt_factory.py  mqtttypes.py  session.py
custom_components/anker_charger/translations/: de.json  en.json  fr.json
custom_components/anker_solix/: __init__.py  const.py  coordinator.py  entity.py  sensor.py  switch.py
custom_components/anker_solix/solixapi/: api.py  apibase.py  mqtt_charger.py  mqtt_factory.py  mqttcmdmap.py  mqttmap.py
custom_components/anker_solix/translations/: de.json  en.json  fr.json
scripts/: compare_coverage.py  setup  test
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_init.py  test_sensor.py  test_switch.py
tests/fixtures/: __init__.py  mqtt_payloads.py
tests/solixapi/: __init__.py  test_api_update_dev.py  test_apibase.py  test_device_hex_data.py  test_helpers.py  test_mqtt.py  test_mqtt_device.py  test_mqttmap.py  test_session.py
